# keepassxc-proxy

./: CMakeLists.txt  LICENSE  NativeMessagingProxy.cpp  NativeMessagingProxy.h  README.md  chromelistener.cpp  chromelistener.h  com.varjolintu.keepassxc-browser-chrome-win.json  keepassxc-proxy  keepassxc-proxy.cpp  main.cpp
cpp_version/: CMakeLists.txt  keepassxc-proxy-unix.cpp
install/: install.sh
keepassxc-proxy/: chromelistener.cpp  chromelistener.h  keepassxc-proxy.pro
python_version/: keepassxc-proxy  keepassxc-proxy.bat
qt_version/: CMakeLists.txt  NativeMessagingHost.cpp  NativeMessagingHost.h  NativeMessagingProxy.cpp  main.cpp
